Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-18870

qmake's UNIX Makefile generator causes "make install" errors be ignored.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.14.0 Alpha
    • 4.7.2, 5.12.0 Beta 2
    • Build tools: qmake
    • None
    • 20e9422e069a27b7e29b54207447e6ca02b3a55a (qt/qtbase/dev)

      See this rule, for example:
      install_target: first FORCE
      @$(CHK_DIR_EXISTS) $(INSTALL_ROOT)/usr/bin/ || $(MKDIR) $(INSTALL_ROOT)/usr/bin/
      -$(INSTALL_PROGRAM) "$(QMAKE_TARGET)" "$(INSTALL_ROOT)/usr/bin/$(QMAKE_TARGET)"

      Due to the leading dash on the command, "make" ignores any errors and returns 0, so scripts or other tools caling "make install" cannot know that it failed, even though it seems rather obvious that they should.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jbornema Joerg Bornemann
            kandeler Christian Kandeler
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes